refactor: optimize preview rendering and sampling